[package]
edition = "2021"
name = "rust-backend-starter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4"}
diesel = {version = "1.4", features = ["postgres", "chrono"]}
rocket = {version = "0.5.0-rc.1"}
rocket_okapi = {version = "0.8.0-rc.1", features = ["swagger"]}
rocket_sync_db_pools = {version = "0.1.0-rc.1", default-features = false, features = ["diesel_postgres_pool"]}
schemars = {version = "0.8", features = ["chrono"]}
