[package]
edition = "2021"
name = "rust-backend-starter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
chrono = {version = "0.4", features = ["serde"]}
diesel = {version = "1.4", features = ["postgres", "chrono", "uuidv07"]}
dotenv = "0.15.0"
fern = "0.6.2"
flexi_logger = "0.27"
log = "0.4.21"
rocket = {version = "0.5.0-rc.3", features = ["json"]}
rocket_okapi = {version = "0.8.0-rc.3", features = ["swagger"]}
rocket_sync_db_pools = {version = "0.1.0-rc.3", default-features = false, features = ["diesel_postgres_pool"]}
schemars = {version = "0.8", features = ["chrono"]}
serde = {version = "1.0", features = ["derive"]}
uuid = "1.4"
